examples/test/testpolicy9757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9757
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key30: value18
      key13: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value22
          key33: value46
      podSelector:
        matchLabels:
          key43: value27
          key28: value31
